# pramana-hermes-company-os

./: .env.example  .gitignore  CLAUDE.md  README.md  gateway-operations.ps1  profile-live-assets.ps1  pyproject.toml  secret-audit.ps1  slack-provisioning.ps1  telegram-provisioning.ps1
docs/: SESSION-HANDOFF.md  agentic-company-os-roadmap.md  hermes-integration.md  operating-model.md  preflight-inputs.md
docs/implementation-plans/: 00-agentic-implementation-plan-index.md  (+2 more)
scripts/: load-messaging-credentials.ps1
tests/: test_accessibility_baseline.py  test_activation.py  test_activation_report.py  test_activation_runner.py  test_activation_sequence.py  test_agent_work_queue.py  test_agent_work_queue_autopickup.py  test_app.py  test_bootstrap.py  test_cli.py  test_codex_execution.py  test_company_launch_drill.py  test_company_manifest.py  test_company_memory_search.py  test_config_templates.py  test_credential_loading_sequence.py  test_credential_status_import.py  test_database_schema_version.py  test_delegation_playbook.py  test_docs.py  test_env_templates.py  test_external_dispatch_delivery.py  test_fingerprints.py  test_first_run.py  test_founder_control_plane.py  test_founder_decisions.py  test_founder_handoff.py  test_founder_inputs.py  test_founder_next_actions.py  test_gateway_operations.py  test_generation_service.py  test_hermes_runtime.py  test_idea_intake.py  test_input_ledger.py  test_kanban_artifacts.py  test_kanban_client.py  test_kanban_provisioning.py  test_kanban_verification_import.py  test_kickoff_readiness.py  test_live_generation.py  (+61 more)
(+174 files in other folders)
