[tool.poetry]
name = "hermes-company-os"
version = "0.1.0"
description = "Founder dashboard for coordinating Hermes profiles as an AI company operating system."
authors = ["Masad <masad@example.com>"]
readme = "README.md"
packages = [{ include = "hermes_company_os", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115,<1.0"
uvicorn = { extras = ["standard"], version = ">=0.32,<1.0" }
jinja2 = ">=3.1,<4.0"
python-multipart = ">=0.0.12,<1.0"

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27,<1.0"
pytest = ">=8.3,<9.0"
ruff = ">=0.8,<1.0"

[tool.poetry.scripts]
hermes-company-os = "hermes_company_os.cli:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
